sfdx-source/force-app/main/default/objects/Nintex_Work_Order_Mapping__mdt/Nintex_Work_Order_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-2348: It stores mapping of Nintex use case to Work Order type and sub-type for parent Work Order creation from Opportunity.</description>
    <label>Nintex Use Case To Work Order Mapping</label>
    <pluralLabel>Nintex Use Case To Work Order Mappings</pluralLabel>
</CustomObject>