sfdx-source/force-app/main/default/objects/Nintex_Work_Order_Mapping__mdt/fields/Nintex_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Use_Case__c</fullName>
    <description>LEM-2348: It holds Nintex use case values. It should always be in sync with Nintex_Use_Cases global value set until Salesforce support usage of global value set in custom metadata.</description>
    <label>Nintex Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Franchise - Unknown</fullName>
                <default>true</default>
                <label>New Franchise - Unknown</label>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>New additional stores</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
            <value>
                <fullName>Drive Form - Franchise</fullName>
            </value>
            <value>
                <fullName>Integrated Franchise</fullName>
            </value>
            <value>
                <fullName>Drive - Amendment</fullName>
            </value>
            <value>
                <fullName>Middleware Provider</fullName>
            </value>
            <value>
                <fullName>SSMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>