sfdx-source/force-app/main/default/objects/Nintex_Work_Order_Mapping__mdt/fields/Work_Order_Provisioning_Process__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Provisioning_Process__c</fullName>
    <description>LEM-4071: It holds Work Order Provisioning Process values.</description>
    <label>Work Order Provisioning Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>