sfdx-source/force-app/main/default/objects/Nintex_Work_Order_Mapping__mdt/fields/Work_Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Sub_Type__c</fullName>
    <description>LEM-2348: It holds Work Order type values. It should always be in sync with Work Order&apos;s Sub-Type values and also maintain the field dependencies accordingly.</description>
    <label>Work Order Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional store creation</fullName>
                <isActive>false</isActive>
                <label>Additional store creation</label>
            </value>
            <value>
                <fullName>Ads and Promo - Activate</fullName>
            </value>
            <value>
                <fullName>Ads and Promo - Deactivate</fullName>
            </value>
            <value>
                <fullName>Business/store mapping update</fullName>
            </value>
            <value>
                <fullName>Caviar - Cross Listing</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Invoicing group/NetSuite setup/update</fullName>
            </value>
            <value>
                <fullName>Menu Updates</fullName>
            </value>
            <value>
                <fullName>Metro Based Promo</fullName>
            </value>
            <value>
                <fullName>Net-new business</fullName>
                <default>true</default>
                <label>Net-new business</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership creation/update</fullName>
            </value>
            <value>
                <fullName>Portal access</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
            <value>
                <fullName>SaaS Fee Setup</fullName>
            </value>
            <value>
                <fullName>Self Delivery</fullName>
            </value>
            <value>
                <fullName>Sponsored Listing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>