sfdx-source/force-app/main/default/objects/Nintex_Work_Order_Mapping__mdt/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>LEM-2348: It holds Work Order type values. It should always be in sync with Work_Order_Type global value set until Salesforce support usage of global value set in custom metadata.</description>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
                <default>true</default>
                <label>Marketplace</label>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Post-Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>