sfdx-source/force-app/main/default/objects/Nintex_Work_Order_Mapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>Nintex_Use_Case__c</columns>
    <columns>Work_Order_Type__c</columns>
    <columns>Work_Order_Sub_Type__c</columns>
    <columns>Work_Order_Provisioning_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>